tests/typechecker/pass/020-fun-let-mutable.hyg
let f: () -> int = {
    let mutable n = 0;
    fun () -> n + 1
};
(f()): int
