tests/typechecker/fail/deepcopy.hyg
let f = fun (x: int) -> x + 1;
let g = deepcopy(f);
g